[metadata]
name = sortcl
version = attr: sortcl.__version__
author = Nicolas Tessore
author_email = n.tessore@ucl.ac.uk
description = sort multiple angular power spectra in healpy input order
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/ntessore/sortcl
project_urls =
    Documentation = https://cltools.readthedocs.io/sortcl/
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
py_modules = sortcl
